--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "immer": "^3.2.0",
+    "mirror-creator": "^1.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.0.1"
+    "react-redux": "^7.1.1",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "reselect": "^4.0.0",
+    "shortid": "^2.2.14"
   },
   "scripts": {
     "start": "react-scripts start",
